--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>SW-Team</groupId>
-    <artifactId>TelegramManager</artifactId>
-    <version>1.0</version>
+    <artifactId>java-TelegramAPI</artifactId>
+    <version>2.0</version>
     <build>
         <defaultGoal>install</defaultGoal>
-        <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+        <sourceDirectory>${basedir}/src/</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -40,29 +40,5 @@
                 </executions>
             </plugin>
         </plugins>
-        <resources>
-            <resource>
-                <targetPath>.</targetPath>
-                <filtering>true</filtering>
-                <directory>${basedir}/src/main/resources/</directory>
-                <includes>
-                    <include>plugin.yml</include>
-                </includes>
-            </resource>
-        </resources>
     </build>
-    <repositories>
-        <repository>
-            <id>mengcraft</id>
-            <url>http://ci.mengcraft.com:8080/plugin/repository/everything/</url>
-        </repository>
-    </repositories>
-    <dependencies>
-        <dependency>
-            <groupId>cn.nukkit</groupId>
-            <artifactId>nukkit</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
 </project>
